hide many days in delivery and small fixes

--- a/widget/scripts/tpl/widget.html
+++ b/widget/scripts/tpl/widget.html
@@ -202,10 +202,10 @@
 			<img src="#">
 		</div>
 	</div>
-    <div class="CDEK-widget__sidebar-button__hint" id="list">#H_LIST#</div>
-    <div class="CDEK-widget__sidebar-button__hint" id="delivery">#H_PROFILE#</div>
-    <div class="CDEK-widget__sidebar-button__hint" id="point1">#H_CASH#</div>
-    <div class="CDEK-widget__sidebar-button__hint" id="point3">#H_DRESS#</div>
-    <div class="CDEK-widget__sidebar-button__hint" id="contacts">#H_SUPPORT#</div>
+    <div class="CDEK-widget__sidebar-button__hint" id="cdek-list">#H_LIST#</div>
+    <div class="CDEK-widget__sidebar-button__hint" id="cdek-delivery">#H_PROFILE#</div>
+    <div class="CDEK-widget__sidebar-button__hint" id="cdek-point1">#H_CASH#</div>
+    <div class="CDEK-widget__sidebar-button__hint" id="cdek-point3">#H_DRESS#</div>
+    <div class="CDEK-widget__sidebar-button__hint" id="cdek-contacts">#H_SUPPORT#</div>
     <div id='#WID#SDEK_closer' class='SDEK_closer'></div>
 </div>
