--- a/widget/scripts/tpl/sidebar.html
+++ b/widget/scripts/tpl/sidebar.html
@@ -1,9 +1,9 @@
-<div class="CDEK-widget__sidebar-burger CDEK-widget__sidebar-button" data-hint="#list">
+<div class="CDEK-widget__sidebar-burger CDEK-widget__sidebar-button" data-hint="#cdek-list">
 	<span></span>
 	<span></span>
 	<span></span>
 </div>
-<div id="#WID#butn_cash" class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button-point" data-hint="#point1" data-mtype="cash">
+<div id="#WID#butn_cash" class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button-point" data-hint="#cdek-point1" data-mtype="cash">
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.50134 32">
 	  <path class="CDEK-widget__pin_green1" d="M12.5,0A12.32748,12.32748,0,0,0,2.8,19.9L12.5,32V0Z" transform="translate(-0.2 0.00003)"/>
 	  <path class="CDEK-widget__pin_green2" d="M12.5,32l9.6-12.1a12.26828,12.26828,0,0,0,2.6-7.6A12.14339,12.14339,0,0,0,12.5,0V32Z" transform="translate(-0.2 0.00003)"/>
@@ -13,7 +13,7 @@
 	  </g>
 	</svg>
 </div>
-<div id="#WID#butn_dress" class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button-point" data-hint="#point3" data-mtype="dress">
+<div id="#WID#butn_dress" class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button-point" data-hint="#cdek-point3" data-mtype="dress">
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.50134 32">
 	  <path class="CDEK-widget__pin_green1" d="M12.5,0A12.32748,12.32748,0,0,0,2.8,19.9L12.5,32V0Z" transform="translate(-0.2 0.00003)"/>
 	  <path class="CDEK-widget__pin_green2" d="M12.5,32l9.6-12.1a12.26828,12.26828,0,0,0,2.6-7.6A12.14339,12.14339,0,0,0,12.5,0V32Z" transform="translate(-0.2 0.00003)"/>
@@ -21,7 +21,7 @@
 	</svg>
 </div>
 <hr>
-<div class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button_phone" data-hint="#contacts">
+<div class="CDEK-widget__sidebar-button CDEK-widget__sidebar-button_phone" data-hint="#cdek-contacts">
 	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 444.41148 446.40002">
 	  <path class="phone" d="M374.456,293.506c-9.7-10.1-21.4-15.5-33.8-15.5-12.3,0-24.1,5.3-34.2,15.4l-31.6,31.5c-2.6-1.4-5.2-2.7-7.7-4-3.6-1.8-7-3.5-9.9-5.3-29.6-18.8-56.5-43.3-82.3-75-12.5-15.8-20.9-29.1-27-42.6,8.2-7.5,15.8-15.3,23.2-22.8,2.8-2.8,5.6-5.7,8.4-8.5,21-21,21-48.2,0-69.2l-27.3-27.3c-3.1-3.1-6.3-6.3-9.3-9.5-6-6.2-12.3-12.6-18.8-18.6-9.7-9.6-21.3-14.7-33.5-14.7s-24,5.1-34,14.7l-0.2.2-34,34.3a73.16053,73.16053,0,0,0-21.7,46.5c-2.4,29.2,6.2,56.4,12.8,74.2,16.2,43.7,40.4,84.2,76.5,127.6,43.8,52.3,96.5,93.6,156.7,122.7,23,10.9,53.7,23.8,88,26,2.1,0.1,4.3.2,6.3,0.2,23.1,0,42.5-8.3,57.7-24.8,0.1-.2.3-0.3,0.4-0.5,5.2-6.3,11.2-12,17.5-18.1,4.3-4.1,8.7-8.4,13-12.9,9.9-10.3,15.1-22.3,15.1-34.6,0-12.4-5.3-24.3-15.4-34.3Zm35.8,105.3c-0.1,0-.1.1,0,0-3.9,4.2-7.9,8-12.2,12.2a262.94685,262.94685,0,0,0-19.3,20c-10.1,10.8-22,15.9-37.6,15.9-1.5,0-3.1,0-4.6-.1-29.7-1.9-57.3-13.5-78-23.4-56.6-27.4-106.3-66.3-147.6-115.6-34.1-41.1-56.9-79.1-72-119.9-9.3-24.9-12.7-44.3-11.2-62.6a45.90488,45.90488,0,0,1,13.8-29.7l34.1-34.1c4.9-4.6,10.1-7.1,15.2-7.1,6.3,0,11.4,3.8,14.6,7l0.3,0.3c6.1,5.7,11.9,11.6,18,17.9,3.1,3.2,6.3,6.4,9.5,9.7l27.3,27.3c10.6,10.6,10.6,20.4,0,31-2.9,2.9-5.7,5.8-8.6,8.6-8.4,8.6-16.4,16.6-25.1,24.4a2.35721,2.35721,0,0,0-.5.5c-8.6,8.6-7,17-5.2,22.7l0.3,0.9c7.1,17.2,17.1,33.4,32.3,52.7l0.1,0.1c27.6,34,56.7,60.5,88.8,80.8a136.53623,136.53623,0,0,0,12.3,6.7c3.6,1.8,7,3.5,9.9,5.3,0.4,0.2.8,0.5,1.2,0.7a21.67755,21.67755,0,0,0,9.9,2.5c8.3,0,13.5-5.2,15.2-6.9l34.2-34.2c3.4-3.4,8.8-7.5,15.1-7.5,6.2,0,11.3,3.9,14.4,7.3l0.2,0.2,55.1,55.1C420.456,377.706,420.456,388.206,410.256,398.806Z" transform="translate(-0.34447 -27.40598)"/>
 	</svg>
