--- a/widget/scripts/tpl/d_pickup.html
+++ b/widget/scripts/tpl/d_pickup.html
@@ -13,7 +13,7 @@
                 <path class="path" d="M28.555,33.532a3.56312,3.56312,0,1,0,4.975-4.979L20.586,19.19a1.00069,1.00069,0,0,0-1.397,1.397Z" transform="translate(0 0.00003)"/>
               </g>
             </svg>
-           #TIME# #DAY#
+            #TIME-DAY#
         </p>
         <!--<p>-->
             <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 331.51501 334.87601">-->
